corrigiendo y documentando ventas cortes y abonos en swageer
