# routes/cortes.py
@@ -1,5 +1,5 @@
 from flask import Blueprint
-from controllers.corte_controller import cntListado
+from controllers.corte_controller import cntListado,cntPrimerCorte,cntCerrarCorte
 
 cortes_bp = Blueprint ('cortes', __name__)
 
@@ -7,3 +7,13 @@ cortes_bp = Blueprint ('cortes', __name__)
 @cortes_bp.route('/')
 def listado():
     return cntListado()
+
+
+@cortes_bp.route('/iniciar', methods=['POST'])
+def iniciar():
+    return cntPrimerCorte()
+
+# Se llama cada vez que el admin decide cerrar el corte
+@cortes_bp.route('/cerrar', methods=['POST'])
+def cerrar():
+    return cntCerrarCorte()
